<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_swipe_tab">Swipe Tab</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="as_fragment">Fragment</string>
    <string name="swipetab">SwipeTab</string>
    <string name="login">Login</string>
    <string name="bottom_sheet">Slide from bottom</string>
    <string name="twitter_login">Twitter Login</string>
    <string name="logo">Logo</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard</string>
    <string name="notification_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard</string>
</resources>
