<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp"
    tools:context=".activity.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/as_fragment" />

            <Button
                android:id="@+id/bottomSheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bottom_sheet" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <Button
                android:id="@+id/twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twitter_login" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/swipetab" />

            <Button
                android:id="@+id/profile_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Profile" />

            <Button
                android:id="@+id/recycler_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Recycler" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container"
            app:srcCompat="@mipmap/ic_launcher" />

    </android.support.constraint.ConstraintLayout>

    <!--<android.support.v4.widget.NestedScrollView-->
        <!--android:id="@+id/bottom_sheet"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="#FAFAFA"-->
        <!--android:clipToPadding="true"-->
        <!--app:behavior_hideable="true"-->
        <!--app:layout_behavior="android.support.design.widget.BottomSheetBehavior">-->

        <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
            <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
            <!--xmlns:tools="http://schemas.android.com/tools"-->
            <!--android:id="@+id/profile_fragment"-->
            <!--android:name="yu.dev.myapplication.fragment.ProfileFragment"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--tools:layout="@layout/fragment_profile" />-->
    <!--</android.support.v4.widget.NestedScrollView>-->
</android.support.design.widget.CoordinatorLayout>